# dein-zeugs

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
dein_zeugs/: __main__.py  analysis.py  cli.py  config.py  embedding.py  models.py  report.py  transcription.py
dein_zeugs/templates/: getting_started.html.j2  report.css  report.html.j2  report.js
dein_zeugs/util/: atomic.py  logging.py
installer/: Run podq.command  com.dein_zeugs.folderaction.workflow.md  com.podq.folderaction.workflow.md  dein-zeugs.command  install.sh
podq/: __main__.py  analysis.py  cli.py  clustering.py  config.py  embedding.py  models.py  paths.py  report.py  transcription.py
podq/templates/: getting_started.html.j2  report.css  report.html.j2  report.js
podq/util/: logging.py
tests/: test_analysis_scoring.py  test_cli_clean_outputs.py  test_cli_concurrent_drop.py  test_cli_idempotency.py  test_cli_subcommands.py  test_clustering.py  test_config.py  test_models_clean.py  test_paths.py  test_report_render.py  test_transcription_smoke.py  test_warm_progress.py
tests/fixtures/: calibration_pairs.md
