[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "podq"
version = "1.0.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "openai-whisper==20231117",
    "torch>=2.2,<3",
    "sentence-transformers>=2.7",
    "ollama>=0.2",
    "jinja2>=3.1",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
podq = "podq.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["podq*"]

[tool.uv.extra-build-dependencies]
openai-whisper = ["setuptools"]
