[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dein-zeugs"
version = "0.3.1"
requires-python = ">=3.11,<3.14"
dependencies = [
    "faster-whisper>=1.0",
    "llama-cpp-python>=0.2.80",
    "fastembed>=0.3",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
dein-zeugs = "dein_zeugs.cli:main"





[tool.setuptools.packages.find]
where = ["."]
include = ["dein_zeugs*"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
